Kaufman triangle z-index fixed

--- a/styles/style.css
+++ b/styles/style.css
@@ -297,6 +297,7 @@
 
 .kaufman__title {
   margin-bottom: 20px;
+  z-index: 2;
 }
 
 .kaufman__triangle {
